Time: 26 ms (83.73%) | Memory: 100.7 MB (22.49%) - LeetSync